more configs on vscode

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -8,16 +8,16 @@
   "terminal.integrated.fontSize": 14,
   "terminal.integrated.shell.osx": "/usr/bin/zsh",
   "editor.tabSize": 2,
-  
+
   // Apply vertical lines
   "editor.rulers": [80, 120],
-  
+
   // Styling
   "prettier.jsxSingleQuote": true,
   "prettier.singleQuote": true,
-  "prettier.disableLanguages": ["html", "css", "scss"],
+  "prettier.disableLanguages": ["css", "scss"],
   "eslint.packageManager": "yarn",
-  
+
   // Actions On Save
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
@@ -25,7 +25,7 @@
     "source.fixAll.tslint": true,
     "source.fixAll.stylelint": true
   },
-  
+
   // Actions On Save
   "[javascript]": {
     "editor.codeActionsOnSave": {
@@ -52,7 +52,7 @@
     ".stylelintrc": "json",
     ".prettierrc": "json"
   },
-  
+
   // Emmets
   "emmet.syntaxProfiles": {
     "javascript": "jsx"
@@ -60,25 +60,25 @@
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   },
-  
+
   // Apply a visual sign on the left of the selected line
   "editor.renderLineHighlight": "gutter",
-  
+
   "workbench.startupEditor": "newUntitledFile",
   "window.zoomLevel": 0,
   "extensions.ignoreRecommendations": true,
-  
+
   // Git
   "gitlens.codeLens.recentChange.enabled": false,
   "gitlens.codeLens.authors.enabled": false,
   "gitlens.codeLens.enabled": false,
   "git.enableSmartCommit": true,
-  
+
   // Suggestions
   "editor.suggestSelection": "first",
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
   "tabnine.experimentalAutoImports": true,
-  
+
   // Misc
   "breadcrumbs.enabled": true,
   "editor.parameterHints.enabled": false,
@@ -92,7 +92,16 @@
   "workbench.activityBar.visible": true,
   "kite.showWelcomeNotificationOnStartup": false,
   "workbench.iconTheme": "material-icon-theme",
-  "workbench.colorTheme": "Community Material Theme Ocean High Contrast",
   "javascript.updateImportsOnFileMove.enabled": "never",
-  
+  "sync.autoDownload": true,
+  "sync.autoUpload": true,
+  "sync.gist": "41ca8040fa7ce0cf1583e117243a833a",
+  "workbench.colorTheme": "Dracula",
+  "cSpell.userWords": [
+    "component",
+    "firestore",
+    "mixins",
+    "unmount",
+    "will"
+  ]
 }
